--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -124,130 +124,139 @@ span.button-help-text {
 	border-color: #fff;
 	transition: none;
 }
+.buy-link-inverse {
+	color: #8899A7;
+	text-decoration: none;
+}
+.buy-link-inverse:hover {
+	border-width: 0 0 1px 0;
+	border-style: solid;
+	padding-bottom: 3px;	
+}
 .try-it-now {
 	box-shadow: 0px 1px 2px 0px rgba(0,0,0,.5);
 }
 /* Margins */
 .m-l-none {
-  margin-left: 0;
+ 	margin-left: 0;
 }
 .m-l {
-  margin-left: 15px;
+ 	margin-left: 15px;
 }
 .m-l-md {
-  margin-left: 30px;
+ 	margin-left: 30px;
 }
 .m-l-lg {
-  margin-left: 50px;
+ 	margin-left: 50px;
 }
 .m-l-xl {
-  margin-left: 60px;
+ 	margin-left: 60px;
 }
 .m-t-none {
-  margin-top: 0;
+ 	margin-top: 0;
 }
 .m-t {
-  margin-top: 15px;
+ 	margin-top: 15px;
 }
 .m-t-md {
-  margin-top: 30px;
+ 	margin-top: 30px;
 }
 .m-t-lg {
-  margin-top: 50px;
+ 	margin-top: 50px;
 }
 .m-t-xl {
-  margin-top: 60px;
+ 	margin-top: 60px;
 }
 .m-r-none {
-  margin-right: 0;
+ 	margin-right: 0;
 }
 .m-r {
-  margin-right: 15px;
+ 	margin-right: 15px;
 }
 .m-r-md {
-  margin-right: 30px;
+ 	margin-right: 30px;
 }
 .m-r-lg {
-  margin-right: 50px;
+ 	margin-right: 50px;
 }
 .m-r-xl {
-  margin-right: 60px;
+ 	margin-right: 60px;
 }
 .m-b-none {
-  margin-bottom: 0;
+ 	margin-bottom: 0;
 }
 .m-b {
-  margin-bottom: 15px;
+ 	margin-bottom: 15px;
 }
 .m-b-md {
-  margin-bottom: 30px;
+ 	margin-bottom: 30px;
 }
 .m-b-lg {
-  margin-bottom: 50px;
+ 	margin-bottom: 50px;
 }
 .m-b-xl {
-  margin-bottom: 60px;
+ 	margin-bottom: 60px;
 }
 /* Padding */
 .p-l-none {
-  padding-left: 0;
+ 	padding-left: 0;
 }
 .p-l {
-  padding-left: 15px;
+ 	padding-left: 15px;
 }
 .p-l-md {
-  padding-left: 30px;
+ 	padding-left: 30px;
 }
 .p-l-lg {
-  padding-left: 50px;
+ 	padding-left: 50px;
 }
 .p-l-xl {
-  padding-left: 60px;
+ 	padding-left: 60px;
 }
 .p-t-none {
-  padding-top: 0;
+ 	padding-top: 0;
 }
 .p-t {
-  padding-top: 15px;
+ 	padding-top: 15px;
 }
 .p-t-md {
-  padding-top: 30px;
+ 	padding-top: 30px;
 }
 .p-t-lg {
-  padding-top: 50px;
+ 	padding-top: 50px;
 }
 .p-t-xl {
-  padding-top: 60px;
+ 	padding-top: 60px;
 }
 .p-r-none {
-  padding-right: 0;
+ 	padding-right: 0;
 }
 .p-r {
-  padding-right: 15px;
+ 	padding-right: 15px;
 }
 .p-r-md {
-  padding-right: 30px;
+ 	padding-right: 30px;
 }
 .p-r-lg {
-  padding-right: 50px;
+ 	padding-right: 50px;
 }
 .p-r-xl {
-  padding-right: 60px;
+ 	padding-right: 60px;
 }
 .p-b-none {
-  padding-bottom: 0;
+ 	padding-bottom: 0;
 }
 .p-b {
-  padding-bottom: 15px;
+ 	padding-bottom: 15px;
 }
 .p-b-md {
-  padding-bottom: 30px;
+ 	padding-bottom: 30px;
 }
 .p-b-lg {
-  padding-bottom: 50px;
+ 	padding-bottom: 50px;
 }
 .p-b-xl {
-  padding-bottom: 60px;
+ 	padding-bottom: 60px;
 }
 
 
@@ -307,7 +316,10 @@ span.button-help-text {
 	background: #8899A7;
 }
 #dropbox-demo-video {
-	position:relative; 
+	position:relative;
+	background: url(../images/video-still@2x.jpg) no-repeat center;
+	background-size: cover;
+	width: 100%;	
 	height: 500px;
 }
 #try-dropbox {
@@ -372,34 +384,36 @@ span.button-help-text {
 .content p {
 	line-height: 26px;
 }
-/* HTML5 background video */
-video#bgvid {
-	position: fixed; right: 0; bottom: 0;
-	min-width: 100%; min-height: 100%;
-	width: auto; height: auto; z-index: -100;
-	background: url('../polina.jpg') no-repeat;
-	background-size: cover;
-}					
 
 
 /*
  * #video content 
  */
 
-#dropbox-demo-video .bg-image {
-  background: url(../images/video-still@2x.jpg) no-repeat center;
-  background-position: center;
-  background-size: cover;
-  bottom: 0;
-  left: 0;
-  margin-right: 100px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-  z-index: 1;
+.play-btn {
+	position: absolute;
+	margin: auto;
+	background: url(../images/player_large.png) no-repeat center;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 106px;
+	height: 106px;
+	cursor: pointer;
+	z-index: 2;
 }
-
+#dropbox-demo-video .video {
+	display: none;	
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: #000;
+}
 
 /*
  * #footer content 
@@ -414,6 +428,22 @@ video#bgvid {
 	font-weight: 700;
 }
 #footer .navbar li a:hover {
+	text-decoration: underline;
+}
+.region-selector {
+	float: right;
+}
+.region-selector:after {
+	border: 0.5em solid transparent;
+	border-bottom-color: inherit;
+	content: "";
+	display: inline-block;
+	margin-left: 0.5em;
+}
+.language-link {
+	text-decoration: none;
+}
+.language-link:hover {
 	text-decoration: underline;
 }
 
