--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -290,11 +290,17 @@ span.button-help-text {
 #why-dropbox .animate-image {
 	height: 100%;
 	display: none;
-	-webkit-animation: scaleUpBounce .5s linear 0s alternate;
+	opacity: 0;
+	-webkit-animation: scaleUpBounce .5s linear 1s alternate;
 	-moz-animation: scaleUpBounce .5s linear 0s alternate;
 	-ms-animation: scaleUpBounce .5s linear 0s alternate;
 	-o-animation: scaleUpBounce .5s linear 0s alternate;
-	animation: scaleUpBounce .5s linear 0s alternate; 	
+	animation: scaleUpBounce .5s linear 0s alternate;
+	-webkit-animation-fill-mode: forwards;
+  	-moz-animation-fill-mode: forwards;
+  	-ms-animation: forwards;
+  	-o-animation: forwards;
+  	animation-fill-mode: forwards;
 }
 #why-dropbox .animate-image-wrapper {
 	position: relative;
@@ -350,11 +356,21 @@ span.button-help-text {
 	background-image: url(../images/dropbox-for-business-files.png);
   	background-repeat: repeat-x;
   	background-position: center;
-  	background-position-y: 500px;  	
+  	background-position-y: 500px;
   	opacity: 0;
-  	width: 100%;  	
+  	width: 100%;
   	height: 500px;
   	position: absolute;
+	-webkit-animation: fadeInUpward 1.8s linear 1s alternate;
+	-moz-animation: fadeInUpward 1.8s linear 1s alternate;
+	-ms-animation: fadeInUpward 1.8s linear 1s alternate;
+	-o-animation: fadeInUpward 1.8s linear 1s alternate;
+  	animation: fadeInUpward 1.8s linear 1s alternate;
+  	-webkit-animation-fill-mode: forwards;
+  	-moz-animation-fill-mode: forwards;
+  	-ms-animation: forwards;
+  	-o-animation: forwards;
+  	animation-fill-mode: forwards;
 }
 #header .dropbox-icon {
 	width: 37px;
@@ -567,6 +583,7 @@ span.button-help-text {
     	-ms-transform: translateX(0%);
     	-webkit-transform: translateX(0%);
     	transform: translateX(0%);
+    	opacity: 1;
     	height: 100%;
     }
 }
@@ -595,6 +612,7 @@ span.button-help-text {
     	-ms-transform: translateX(0%);
     	-webkit-transform: translateX(0%);
     	transform: translateX(0%);
+    	opacity: 1;
     	height: 100%;
     }
 }
@@ -623,8 +641,31 @@ span.button-help-text {
     	-ms-transform: translateX(0%);
     	-webkit-transform: translateX(0%);
     	transform: translateX(0%);
+    	opacity: 1;
     	height: 100%;
     }
+}
+
+@-moz-keyframes fadeInUpward {
+	0% {
+		opacity: 0;
+		background-position-y: 500px;
+	}
+	100% {
+		opacity: 1;
+		background-position-y: -86px;
+	}
+}
+
+@-webkit-keyframes fadeInUpward {
+	0% {
+		opacity: 0;
+		background-position-y: 500px;
+	}
+	100% {
+		opacity: 1;
+		background-position-y: -86px;
+	}
 }
 
 @keyframes fadeInUpward {
