--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -62,7 +62,7 @@ a {
 .btn {
 	min-width: 100px;
 	height: 34px;
-	padding: 6px 15px;
+	padding: 5px 15px;
 	border-radius: 5px;	
 	text-align: center;	
 	text-decoration: none;
@@ -74,6 +74,7 @@ a {
 	height: 50px;
 	font-size: 17px;
 	margin: 25px 10px;
+	padding: 6px 15px;
 }
 .btn.btn-lg.btn-primary {
 	border: 2px solid #0B56BC;
@@ -289,8 +290,11 @@ span.button-help-text {
 }
 #why-dropbox .animate-image {
 	height: 100%;
-	display: none;
+	visibility: hidden;
 	opacity: 0;
+}
+#why-dropbox .animate-image.active {
+	visibility: visible;
 	-webkit-animation: scaleUpBounce .5s linear 1s alternate;
 	-moz-animation: scaleUpBounce .5s linear 0s alternate;
 	-ms-animation: scaleUpBounce .5s linear 0s alternate;
@@ -355,17 +359,16 @@ span.button-help-text {
 #header .header-bg-image {
 	background-image: url(../images/dropbox-for-business-files.png);
   	background-repeat: repeat-x;
-  	background-position: center;
-  	background-position-y: 500px;
+  	background-position: center 500px;
   	opacity: 0;
   	width: 100%;
   	height: 500px;
   	position: absolute;
-	-webkit-animation: fadeInUpward 1.8s linear 1s alternate;
-	-moz-animation: fadeInUpward 1.8s linear 1s alternate;
-	-ms-animation: fadeInUpward 1.8s linear 1s alternate;
-	-o-animation: fadeInUpward 1.8s linear 1s alternate;
-  	animation: fadeInUpward 1.8s linear 1s alternate;
+	-webkit-animation: fadeInUpward 1.5s linear 1s alternate;
+	-moz-animation: fadeInUpward 1.5s linear 1s alternate;
+	-ms-animation: fadeInUpward 1.5s linear 1s alternate;
+	-o-animation: fadeInUpward 1.5s linear 1s alternate;
+  	animation: fadeInUpward 1.5s linear 1s alternate;
   	-webkit-animation-fill-mode: forwards;
   	-moz-animation-fill-mode: forwards;
   	-ms-animation: forwards;
@@ -649,32 +652,32 @@ span.button-help-text {
 @-moz-keyframes fadeInUpward {
 	0% {
 		opacity: 0;
-		background-position-y: 500px;
+		background-position: center 500px;
 	}
 	100% {
 		opacity: 1;
-		background-position-y: -86px;
+		background-position: center -86px;
 	}
 }
 
 @-webkit-keyframes fadeInUpward {
 	0% {
 		opacity: 0;
-		background-position-y: 500px;
+		background-position: center 500px;
 	}
 	100% {
 		opacity: 1;
-		background-position-y: -86px;
+		background-position: center -86px;
 	}
 }
 
 @keyframes fadeInUpward {
 	0% {
 		opacity: 0;
-		background-position-y: 500px;
+		background-position: center 500px;
 	}
 	100% {
 		opacity: 1;
-		background-position-y: -86px;
+		background-position: center -86px;
 	}
 }
