--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -390,10 +390,6 @@ span.button-help-text {
   	-o-animation: forwards;
   	animation-fill-mode: forwards;
 }
-#header .dropbox-icon {
-	width: 37px;
-	height: 34px;
-}
 
 .navbar {
 	padding: 0;
@@ -492,86 +488,158 @@ span.button-help-text {
 
 
 /*
- * 12 column grid with gutter
- */
+ * Media Queries for responsive view
+ */ 
+@media(max-width: 1049px)
+{
+	.row .col-1,
+	.row .col-2,
+	.row .col-3,
+	.row .col-4,
+	.row .col-5,
+	.row .col-6,
+	.row .col-7,
+	.row .col-8,
+	.row .col-9,
+	.row .col-10,
+	.row .col-11,
+	.row .col-12 {
+		margin: 0 auto;
+		max-width: 85%;
+	}
+	#icon-row {
+		text-align: center;
+	}
+	#page-menu {
+		display: none;
+	}
+	.carousel .image {
+		max-width: 100%;
+		max-height: 100%;
+		width: auto;
+		height: auto;
+	}
+	.carousel .left-arrow,
+	.carousel .right-arrow {
+		display: none;
+	}
+}
+@media(max-width: 800px)
+{
+	.row .col-1,
+	.row .col-2,
+	.row .col-3,
+	.row .col-4,
+	.row .col-5,
+	.row .col-6,
+	.row .col-7,
+	.row .col-8,
+	.row .col-9,
+	.row .col-10,
+	.row .col-11,
+	.row .col-12 {
+		max-width: 100%;
+	}
+	#header .row,
+	#why-dropbox {
+		padding: 0 10%;
+	}
+}
+@media(max-width: 550px)
+{
+	#header h1 {
+		font-size: 32px;
+	}
+	#what-dropbox h2 {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+}
+@media(min-width: 1050px)
+{
+	#header .dropbox-icon {
+		width: 37px;
+		height: 34px;
+	}
 
-.row {
-	margin: 0 auto;
-	max-width: 1050px;
+	/* 12 (55px) column grid with (30px) gutters */
+	.row {
+		margin: 0 auto;
+		max-width: 1050px;
+	}
+	.row:before, 
+	.row:after {
+		content: " "; 
+		display: table; 
+		clear:both;
+	}
+	.row .col-12 {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+	.row [class^="col-"]:first-child, 
+	.row [class*="col-"]:first-child {
+		margin-left: 15px;
+	}
+	.row [class^="col-"]:last-child, 
+	.row [class*="col-"]:last-child {
+		margin-right: 15px;
+	}
+	.row .col-1,
+	.row .col-2,
+	.row .col-3,
+	.row .col-4,
+	.row .col-5,
+	.row .col-6,
+	.row .col-7,
+	.row .col-8,
+	.row .col-9,
+	.row .col-10,
+	.row .col-11,
+	.row .col-12 {
+		position: relative;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
+		float: left;
+	}
+	.row .col-1 {
+		width: 85px;
+	}
+	.row .col-2 {
+		width: 170px;
+	}
+	.row .col-3 {
+		width: 255px;
+	}
+	.row .col-4 {
+		width: 340px;
+	}
+	.row .col-5 {
+		width: 425px;
+	}
+	.row .col-6 {
+		width: 510px;
+	}
+	.row .col-7 {
+		width: 595px;
+	}
+	.row .col-8 {
+		width: 680px;
+	}
+	.row .col-9 {
+		width: 765px;
+	}
+	.row .col-10 {
+		width: 850px;
+	}
+	.row .col-11 {
+		width: 935px;
+	}
+	.row .col-12 {
+		width: 1020px;
+	}
 }
-.row:before, 
-.row:after {
-	content: " "; 
-	display: table; 
-	clear:both;
-}
-.row .col-12 {
-	margin-left: 15px;
-	margin-right: 15px;
-}
-.row [class^="col-"]:first-child, 
-.row [class*="col-"]:first-child {
-	margin-left: 15px;
-}
-.row [class^="col-"]:last-child, 
-.row [class*="col-"]:last-child {
-	margin-right: 15px;
-}
-.row .col-1,
-.row .col-2,
-.row .col-3,
-.row .col-4,
-.row .col-5,
-.row .col-6,
-.row .col-7,
-.row .col-8,
-.row .col-9,
-.row .col-10,
-.row .col-11,
-.row .col-12 {
-	position: relative;
-	min-height: 1px;
-	padding-right: 15px;
-	padding-left: 15px;
-	float: left;
-}
-.row .col-1 {
-	width: 85px;
-}
-.row .col-2 {
-	width: 170px;
-}
-.row .col-3 {
-	width: 255px;
-}
-.row .col-4 {
-	width: 340px;
-}
-.row .col-5 {
-	width: 425px;
-}
-.row .col-6 {
-	width: 510px;
-}
-.row .col-7 {
-	width: 595px;
-}
-.row .col-8 {
-	width: 680px;
-}
-.row .col-9 {
-	width: 765px;
-}
-.row .col-10 {
-	width: 850px;
-}
-.row .col-11 {
-	width: 935px;
-}
-.row .col-12 {
-	width: 1020px;
-}
-
 
 /*
  * Keyframes 
