--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -532,6 +532,10 @@ span.button-help-text {
 		max-width: 360px;
   		margin: 0 auto;
 	}
+	#footer {
+		margin: 0 auto;
+		max-width: 85%;
+	}	
 }
 @media(max-width: 800px)
 {
