--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -397,7 +397,7 @@ span.button-help-text {
 /* Background Image */
 #header .header-bg-image {
 	background-image: url(../images/dropbox-for-business-files.png);
-  	background-repeat: no-repeat;
+  	background-repeat: repeat-x;
   	background-position: center 500px;
   	opacity: 0;
   	width: 100%;
