--- a/assets/css/dropbox.css
+++ b/assets/css/dropbox.css
@@ -407,6 +407,7 @@ span.button-help-text {
 	-moz-animation: fadeInUpward 1.5s linear 1s alternate;
 	-ms-animation: fadeInUpward 1.5s linear 1s alternate;
 	-o-animation: fadeInUpward 1.5s linear 1s alternate;
+  	-ms-animation: fadeInUpward 1.5s linear 1s alternate;
   	animation: fadeInUpward 1.5s linear 1s alternate;
   	-webkit-animation-fill-mode: forwards;
   	-moz-animation-fill-mode: forwards;
